testcases/error/invalid_port_default_value.veryl
module invalid_port_default_value (
    a: output logic = 0,
) {
    assign a = 0;
}
